; ModuleID = '/home/carl/AnghaBench/FFmpeg/doc/examples/extr_transcode_aac.c_read_decode_convert_and_store.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/doc/examples/extr_transcode_aac.c_read_decode_convert_and_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i64 }

@AVERROR_EXIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32*, i32*, i32*)* @read_decode_convert_and_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_decode_convert_and_store(i32* %0, i32* %1, i32* %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca %struct.TYPE_5__*, align 8
  %14 = alloca i32**, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %13, align 8
  store i32** null, i32*** %14, align 8
  store i32 0, i32* %15, align 4
  %17 = load i32, i32* @AVERROR_EXIT, align 4
  store i32 %17, i32* %16, align 4
  %18 = call i64 @init_input_frame(%struct.TYPE_5__** %13)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %6
  br label %69

21:                                               ; preds = %6
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = load i32*, i32** %12, align 8
  %26 = call i64 @decode_audio_frame(%struct.TYPE_5__* %22, i32* %23, i32* %24, i32* %15, i32* %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %21
  br label %69

29:                                               ; preds = %21
  %30 = load i32*, i32** %12, align 8
  %31 = load i32, i32* %30, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %29
  store i32 0, i32* %16, align 4
  br label %69

34:                                               ; preds = %29
  %35 = load i32, i32* %15, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %68

37:                                               ; preds = %34
  %38 = load i32*, i32** %10, align 8
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %40 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = call i64 @init_converted_samples(i32*** %14, i32* %38, i32 %41)
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %45

44:                                               ; preds = %37
  br label %69

45:                                               ; preds = %37
  %46 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %47 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %46, i32 0, i32 1
  %48 = load i64, i64* %47, align 8
  %49 = inttoptr i64 %48 to i32**
  %50 = load i32**, i32*** %14, align 8
  %51 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %52 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %51, i32 0, i32 0
  %53 = load i32, i32* %52, align 8
  %54 = load i32*, i32** %11, align 8
  %55 = call i64 @convert_samples(i32** %49, i32** %50, i32 %53, i32* %54)
  %56 = icmp ne i64 %55, 0
  br i1 %56, label %57, label %58

57:                                               ; preds = %45
  br label %69

58:                                               ; preds = %45
  %59 = load i32*, i32** %7, align 8
  %60 = load i32**, i32*** %14, align 8
  %61 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %62 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %61, i32 0, i32 0
  %63 = load i32, i32* %62, align 8
  %64 = call i64 @add_samples_to_fifo(i32* %59, i32** %60, i32 %63)
  %65 = icmp ne i64 %64, 0
  br i1 %65, label %66, label %67

66:                                               ; preds = %58
  br label %69

67:                                               ; preds = %58
  store i32 0, i32* %16, align 4
  br label %68

68:                                               ; preds = %67, %34
  store i32 0, i32* %16, align 4
  br label %69

69:                                               ; preds = %68, %66, %57, %44, %33, %28, %20
  %70 = load i32**, i32*** %14, align 8
  %71 = icmp ne i32** %70, null
  br i1 %71, label %72, label %78

72:                                               ; preds = %69
  %73 = load i32**, i32*** %14, align 8
  %74 = getelementptr inbounds i32*, i32** %73, i64 0
  %75 = call i32 @av_freep(i32** %74)
  %76 = load i32**, i32*** %14, align 8
  %77 = call i32 @free(i32** %76)
  br label %78

78:                                               ; preds = %72, %69
  %79 = call i32 @av_frame_free(%struct.TYPE_5__** %13)
  %80 = load i32, i32* %16, align 4
  ret i32 %80
}

declare dso_local i64 @init_input_frame(%struct.TYPE_5__**) #1

declare dso_local i64 @decode_audio_frame(%struct.TYPE_5__*, i32*, i32*, i32*, i32*) #1

declare dso_local i64 @init_converted_samples(i32***, i32*, i32) #1

declare dso_local i64 @convert_samples(i32**, i32**, i32, i32*) #1

declare dso_local i64 @add_samples_to_fifo(i32*, i32**, i32) #1

declare dso_local i32 @av_freep(i32**) #1

declare dso_local i32 @free(i32**) #1

declare dso_local i32 @av_frame_free(%struct.TYPE_5__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
